# learn-rendering

./: Cargo.toml
src/: alt_shader.wgsl  display.rs  frag.wgsl  fragment.glsl  lib.rs  main.rs  renderer.rs  shader.glsl  shader.wgsl  text.rs
src/display/: mod.rs
src/renderer/: mod.rs
