[package]
name = "learn-rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
harfbuzz_rs = { version = "2.0.1", features = ["rusttype"] }
image = {version = "0.25.5", features = ["rayon"]}
log = "0.4.22"
rayon = "1.10.0"
rusttype = "0.9.3"
simple_logger = "5.0.0"
tokio = { version = "1.41.1", default-features = false, features = ["rt", "rt-multi-thread"] }
wgpu = "23.0.1"
winit = "0.30.5"
