[package]
name = "learn-rendering"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
term = { version = "0.0.0", path = "../gnahc/gnahc_term" }
vte = { version = "0.0.0", path = "../gnahc/gnahc_vte" }
harfbuzz_rs = { version = "2.0.1", features = ["rusttype"] }
image = {version = "0.25.5", features = ["rayon"]}
log = "0.4.22"
rayon = "1.10.0"
rusttype = {version = "0.9.3", features = ["gpu_cache"]}
simple_logger = "5.0.0"
tokio = { version = "1.41.1", default-features = false, features = ["rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = "23.0.1"
winit = "0.30.5"
